# web

./: manage.py  package-lock.json  package.json  pyproject.toml  run  tailwind.config.js
compatibility/: admin.py  models.py  urls.py  views.py
compatibility/templatetags/: custom_filters.py
home/: urls.py  views.py
melonx/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
templates/: base.html
templates/compatibility/: compatibility_list_item.html  index.html  request_game_entry.html
templates/home/: index.html
